--- a/leadmanager/frontend/templates/frontend/index.html
+++ b/leadmanager/frontend/templates/frontend/index.html
@@ -2,6 +2,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    {% load static %}
+    <link rel="stylesheet" href="{% static "css/style.min.css" %}">
     <title>Lead Manager</title>
 </head>
 <body>
